--- a/src/app/components/site/header/head-button.component.css
+++ b/src/app/components/site/header/head-button.component.css
@@ -1,32 +1,31 @@
   .button-d {
+    width: 100%;
     color: #FFF;
     font-family: Ubuntu;
-    font-size: 12px;
+    font-size: 18px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 100;
     line-height: 10px; /* 83.333% */
     letter-spacing: 0.72px;
     text-transform: uppercase;
-    padding-bottom: 8px;
-  }
-
-  .button-d2 {
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 14px; /* 77.778% */
+    padding-bottom: 16px;
+    padding-top: 16px;
+    border-top: 1px solid rgb(59, 59, 59);
+    text-align: left;
+    transition: color 0.3s ease;
   }
 
   .menub {
     background-image: url("/assets/img/arrow-lang.svg");
-    background-position: right;
+    background-position: 50% 0;
+    background-size: 12px;
     background-repeat: no-repeat;
-    padding-right: 12px;
-    padding-top: 7px;
   }
   
+  button:hover {
+    color: #F14D34;
+  }
+
   button:hover .line-image {
     opacity: 1;
   }
@@ -37,3 +36,19 @@
     opacity: 0;
     transition: opacity 0.5s ease;
   }
+
+  @media only screen and (min-width: 640px) {
+    .button-d {
+      width: auto;
+      text-align: center;
+      font-weight: 500;
+      font-size: 12px;
+      padding-top: 0px;
+      border-top: none;
+    }
+
+    .menub {
+      padding-left: 0px;
+      padding-top: 16px;
+    }
+}
