--- a/src/app/components/site/header/head-button.component.html
+++ b/src/app/components/site/header/head-button.component.html
@@ -1,7 +1,14 @@
 <button (click)="scrollTo()" (mouseenter)="onMouseOver()" [class]="getClassList()">
-  {{ innerText }}
+  <div class="flex ml-[10px] md:ml-[0px]">
+    {{ innerText }}
+    <ng-container *ngIf="isMenu()">
+      <svg class="ml-[3px] mt-[2px]" xmlns="http://www.w3.org/2000/svg" width="10" height="7" viewBox="0 0 9 6" fill="none">
+        <path opacity="0.7" d="M1 1L4.5 4.5L8 1" stroke="white" stroke-width="2"/>
+      </svg>
+    </ng-container>
+  </div>
   <ng-container *ngIf="!isMenu()">
-    <svg class='line-image' preserveAspectRatio='none' [ngStyle]="{ 'width.px': svgWidth }" height="3" viewBox="0 0 140 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <svg class='hidden sm:block line-image' preserveAspectRatio='none' [ngStyle]="{ 'width.px': svgWidth }" height="3" viewBox="0 0 140 3" fill="none" xmlns="http://www.w3.org/2000/svg">
       <line y1="1.5" x2="140" y2="1.5" stroke="#F14D34" stroke-width="3"/>
     </svg>
   </ng-container>
