--- a/src/app/components/site/header/header.component.css
+++ b/src/app/components/site/header/header.component.css
@@ -1,7 +1,6 @@
 #block1 {
   position: relative;
   overflow: hidden;
-  margin-bottom: 50px;
   width: 100%;
 }
 
@@ -10,9 +9,18 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  min-height: 48px;
   background-color: #000000;
   box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
   z-index: 200;
+  background-image: url("/assets/img/drupal-coder.svg");
+  background-size: 200px auto;
+  background-position: left 99%;
+  background-repeat: no-repeat;
+}
+
+#bgroup {
+  border-bottom: 2px solid rgb(172, 105, 228);
 }
 
 #logo {
@@ -71,6 +79,14 @@
 }
 
 @media only screen and (min-width: 640px) {
+  #bgroup {
+    border-bottom: 0px;
+  }
+
+  #block1 {
+    margin-bottom: 50px;
+  }
+  
   #container {
     text-align: initial;
   }
@@ -90,6 +106,7 @@
   }
 
   #content {
+    background-image: none;
     position: relative;
     bottom: auto;
     left: auto;
