--- a/src/app/components/site/footer/footer-contact.component.html
+++ b/src/app/components/site/footer/footer-contact.component.html
@@ -5,7 +5,7 @@
     <textarea class="field2" placeholder="Ваш комментарий" #form_field2></textarea>
     <label class="flex custom-checkbox">
       <input class="hidden-checkbox" type="checkbox" #form_box>
-      <span class="checkmark"></span>
+      <span class="checkmark transform translate-y-[5px] lg:translate-y-[0px] mr-[10px] lg:mr-[2px] scale-[130%] lg:scale-[100%]"></span>
       <div id="checkText">Отправляя заявку, я даю согласие на <a href="/" style="color: #f14d34;">обработку своих персональных данных.</a> <a style="font-size: 20px; color: red;">*</a></div>
     </label>
     <button (click)="send()"><span>СВЯЖИТЕСЬ С НАМИ</span></button>
