--- a/src/app/components/site/header/header.component.css
+++ b/src/app/components/site/header/header.component.css
@@ -5,22 +5,34 @@
 }
 
 #content {
+  overflow-x: hidden;
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   min-height: 48px;
+  max-height: 70%;
   background-color: #000000;
   box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
   z-index: 200;
+}
+
+#wrapper {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 48px;
+  width: 100%;
+  background-color: #000000;
   background-image: url("/assets/img/drupal-coder.svg");
   background-size: 200px auto;
   background-position: left 99%;
   background-repeat: no-repeat;
+  border-top: 2px solid rgb(172, 105, 228);
 }
 
 #bgroup {
-  border-bottom: 2px solid rgb(172, 105, 228);
+  margin-bottom: 48px;
 }
 
 #logo {
