--- a/src/app/components/site/header/header.component.html
+++ b/src/app/components/site/header/header.component.html
@@ -7,7 +7,7 @@
         <div id="container" class="z-1 md:justify-start">
           <div class="justify-center">
             <div class="md:h-32">
-              <div id="content" [class.hidden]="isPopupShown()" class="lg:flex items-center">
+              <div id="content" class="lg:flex items-center">
                 <img href="/" class="hidden sm:block transform translate-x-[12%] scale-[124%] translate-y-[-15%] w-auto mr-4" src="/assets/img/drupal-coder.svg" alt="Логотип" id="logo">
                   <div id="bgroup" class="mb-[48px] sm:mb-[0px]">
                     <head-button class="inline" link=".section_support" innerText="ПОДДЕРЖКА DRUPAL"></head-button>
